[package]
edition = "2021"
name = "macetech-led-shades"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", features = [
    "arduino-uno",
] }
embedded-hal = "*"
panic-halt = "0.2"

[profile.dev]
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"
